# HyLaGI

./: .dockerignore  .gitignore  20131120_bpi_14_10_case  CMakeLists.txt  Dockerfile  HydLa.m  HydLa.sln  HydLa2.m  Hyrose.sln  LICENSE  Makefile  Makefile.common  README.md  auto_plot.rb  box.plt  check_examples.sh  check_samples.bat  check_samples.sh  cleanUp.bat  conflict.txt  create_win_package.bat  csesimplog  find_all.sh  grep_log.sh  juggling.hydla  log  log_after  log_after2  log_before  make_sample.sh  makelog  mosfet.hydla  out  out.out  replace_all.sh  sbr_after_d  sbr_before_d  source.txt  sr.sh  sr_cygwin.sh  (+7 more)
HydLa_parser/: Makefile  (+13 more)
src/: CMakeLists.txt  Makefile  Makefile.common  Makefile.common.pecorino  Makefile.common.rollot  xmake.lua
src/backend/: Backend.cpp  Backend.h  CMakeLists.txt  InterfaceError.h  Link.h  LinkError.h  Makefile
src/backend/mathematica/: MathematicaLink.cpp  MathematicaLink.h  math_source.cpp  math_source.h
src/backend/reduce/: REDUCELink.cpp  REDUCELink.h  REDUCELinkFactory.h  REDUCELinkIpc.cpp  REDUCELinkIpc.h  REDUCELinkTelnet.cpp  REDUCELinkTelnet.h  VariableNameEncoder.h  reduce_source.cpp  reduce_source.h  reduce_source.red
src/common/: CMakeLists.txt  HydLaError.h  Logger.cpp  Logger.h  Opts.h  SignalHandler.cpp  SignalHandler.h  TimeOutError.h  Timer.cpp  Timer.h  Utility.cpp  common.vcproj
src/constraint_hierarchy/: CMMap.cpp  CMMap.h  IncrementalModuleSet.cpp  IncrementalModuleSet.h  ModuleSet.h  ModuleSetContainer.cpp  ModuleSetContainer.h  ModuleSetGraph.cpp  ModuleSetList.cpp  ModuleSetList.h
src/core/: #Makefile#  .Makefile.swp  .main.cpp.swp  CMakeLists.txt  Makefile  ProgramOptions.cpp  ProgramOptions.h  core.vcproj  main.cpp  symbolic_simulate.cpp  version.cpp  version.h
src/debug/: .debug_main.cpp.swp  CMakeLists.txt  Makefile  boost_algo_str.cpp  boost_algo_str.h  debug_main.cpp  debug_main.h  json_parser.cpp  json_parser.h  solve_sym.cpp  solve_sym.h  solve_sym.py
src/hierarchy/: CMMap.cpp  CMMap.h  CMakeLists.txt  IncrementalModuleSet.cpp  IncrementalModuleSet.h  ListBoundVariableUnifier.cpp  ListBoundVariableUnifier.h  Makefile  ModuleSet.cpp  ModuleSet.h  ModuleSetContainer.cpp  ModuleSetContainer.h  ModuleSetContainerCreator.h  ModuleSetGraph.cpp  ModuleSetGraph.h  ModuleSetList.cpp  ModuleSetList.h  ModuleSetTester.h
src/interval/: AffineApproximator.cpp  AffineApproximator.h  AffineMixedValue.cpp  AffineMixedValue.h  AffineOrInteger.cpp  AffineOrInteger.h  AffineTransformer.cpp  AffineTransformer.h  AffineTreeVisitor.cpp  AffineTreeVisitor.h  CMakeLists.txt  IntervalNewton.cpp  IntervalNewton.h  IntervalNewtonError.h  IntervalOrInteger.cpp  IntervalOrInteger.h  IntervalTreeVisitor.cpp  IntervalTreeVisitor.h  Makefile  NonlinearFunctionApproximator.cpp  NonlinearFunctionApproximator.h  NonlinearReplacer.cpp  NonlinearReplacer.h  NonlinearSolver.cpp  NonlinearSolver.h  NonlinearTwoVariableFunction.h  NonlinearTwoVariableFunction_mlp.h
src/interval/kv/: affine.hpp  conv-dd.hpp  conv-double.hpp  interval.hpp  ode-qr.hpp
src/io/: CMakeLists.txt  Constants.cpp  Constants.h  ConstraintVisualization.cpp  ConstraintVisualization.h  CsvProfilePrinter.cpp  CsvProfilePrinter.h  JsonReader.cpp  JsonReader.h  JsonWriter.cpp  JsonWriter.h  Makefile  MathematicaTrajPrinter.cpp  MathematicaTrajPrinter.h  NumericTrajPrinter.cpp  ProfilePrinter.cpp  ProfilePrinter.h  StdProfilePrinter.cpp  StdProfilePrinter.h  SymbolicTrajPrinter.cpp  SymbolicTrajPrinter.h  TrajPrinter.h  Types.h  picojson.h
src/math_source_converter/: CMakeLists.txt  main.cpp  msc
src/output/: CsvProfilePrinter.cpp  CsvProfilePrinter.h  JsonWriter.cpp  JsonWriter.h  Makefile  MathematicaTrajPrinter.cpp  MathematicaTrajPrinter.h  NumericTrajPrinter.cpp  ProfilePrinter.cpp  ProfilePrinter.h  StdProfilePrinter.h  SymbolicTrajPrinter.cpp  SymbolicTrajPrinter.h  TrajPrinter.h  Types.h  picojson.h
src/parser/: BaseNodeVisitor.h  BuiltInParser.cpp  CMakeLists.txt  CommentGrammar.h  ConstraintParser.cpp  DefaultNodeFactory.h  DefaultTreeVisitor.cpp  DefaultTreeVisitor.h  DefinitionContainer.h  ExpressionParser.cpp  FunctionParser.cpp  HydLaAST.cpp  HydLaAST.h  HydLaGrammar.h  HydLaGrammarRule.h  HydLaParser.cpp  Lexer.cpp  Lexer.h  ListExpander.cpp  ListExpander.h  ListParser.cpp  Makefile  Node.cpp  Node.h  NodeFactory.h  NodeIDRebuilder.h  NodeIDUpdater.cpp  NodeIDUpdater.h  NodeTreeGenerator.h  ParseError.h  ParseTree.cpp  ParseTree.h  ParseTreeGraphvizDumper.cpp  ParseTreeGraphvizDumper.h  ParseTreeJsonDumper.cpp  ParseTreeJsonDumper.h  ParseTreeSemanticAnalyzer.cpp  ParseTreeSemanticAnalyzer.h  Parser.cpp  Parser.h  (+2 more)
src/reduce_source_converter/: main.cpp  rsc
src/simulator/: .#Simulator.cpp  .PhaseSimulator.cpp.swp  AlwaysFinder.cpp  AlwaysFinder.h  AnalysisResultChecker.cpp  AnalysisResultChecker.h  AskCollector.cpp  AskCollector.h  AskDisjunctionFormatter.cpp  AskDisjunctionFormatter.h  AskDisjunctionSplitter.cpp  AskDisjunctionSplitter.h  AskRelationGraph.cpp  AskRelationGraph.h  AtomicConstraint.h  AtomicConstraintFinder.cpp  AtomicConstraintFinder.h  Automaton.cpp  Automaton.h  BatchSimulator.cpp  BatchSimulator.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ConsistencyChecker.cpp  ConsistencyChecker.h  ConstraintAnalyzer.cpp  ConstraintAnalyzer.h  ConstraintDifferenceCalculator.cpp  ConstraintDifferenceCalculator.h  ConstraintStore.cpp  ConstraintStore.h  ContinuityMapMaker.cpp  ContinuityMapMaker.h  DefaultParameter.cpp  EpsilonMode.cpp  EpsilonMode.h  Exceptions.h  ExpressionListElementFinder.cpp  ExpressionListElementFinder.h  (+79 more)
src/symbolic_expression/: BaseNodeVisitor.cpp  BaseNodeVisitor.h  CMakeLists.txt  DefaultTreeVisitor.cpp  DefaultTreeVisitor.h  Makefile  Node.cpp  Node.h  NodeReplacer.cpp  NodeReplacer.h  TreeInfixPrinter.cpp  TreeInfixPrinter.h  TreeVisitor.h  TreeVisitorForAtomicConstraint.cpp  TreeVisitorForAtomicConstraint.h
src/symbolic_simulator/: AnalysisResultChecker.h  ConstraintAnalyzer.cpp  Makefile  PrevSearcher.h  SymbolicPhaseSimulator.cpp
src/utility/: CMakeLists.txt  Makefile  Utility.cpp  Utility.h
(+1056 files in other folders)
