list(APPEND libs core backend common debug hierarchy interval io math_source_converter parser simulator symbolic_expression utility)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${libs})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/parser/error)
include_directories(${Python3_INCLUDE_DIRS})
include_directories(${Boost_INCLUDE_DIRS})

add_subdirectory(core)
add_subdirectory(backend)
add_subdirectory(common)
add_subdirectory(debug)
add_subdirectory(hierarchy)
add_subdirectory(interval)
add_subdirectory(io)
add_subdirectory(math_source_converter)
add_subdirectory(parser)
add_subdirectory(simulator)
add_subdirectory(symbolic_expression)
add_subdirectory(utility)